# request-kit

./: .prettierignore  HANDOVER.md  MVP.md  PLAN.md  PLAN_FEEDBACK_1.md  PLAN_FEEDBACK_2.md  PLAN_FEEDBACK_3.md  PLAN_FEEDBACK_4.md  PLAN_FEEDBACK_5.md  eslint.config.js  index.html  package.json  rust-toolchain.toml  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: build.yml
docs/: smoke.md
docs/superpowers/plans/: 2026-07-23-m2a-storage.md  2026-07-24-m2b-history-search-settings.md
docs/superpowers/specs/: 2026-07-23-m2a-storage-design.md  2026-07-24-m2b-history-search-settings-design.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: app.rs  http.rs  mod.rs  storage.rs
src-tauri/src/http/: clients.rs  error_map.rs  executor.rs  mod.rs  retain.rs  types.rs  validate.rs
src-tauri/src/storage/: atomic.rs  history.rs  mod.rs  nodes.rs  paths.rs  quarantine.rs  scan.rs  settings.rs  slug.rs  workspace.rs
src-tauri/tests/: http_integration.rs  storage_integration.rs
src/composables/: useHotkeys.ts
src/editor/: extensions.ts  themes.ts
src/ipc/: commands.ts  errors.spec.ts  errors.ts
src/lib/format/: json.spec.ts  (+1 more)
src/stores/: history.spec.ts  history.ts  settings.spec.ts  settings.ts  tabs.spec.ts  tabs.ts  ui.ts  workspace.spec.ts  workspace.ts
src/styles/: base.css  themes.css
src/types/: history.ts  request.ts  response.ts  settings.ts  workspace.ts
tools/: fixture-server.ts  tsconfig.json
(+41 files in other folders)
